--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+scrapy = "^2.11.0"
+rich = "^13.7.0"
+pydantic-settings = "^2.1.0"
+sqlalchemy = "^2.0.23"
+structlog = "^23.2.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
