--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["webscraper", "rich_cli"]
+  "conventionalCommits.scopes": ["webscraper", "rich_cli", "setup_script"]
 }
