--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ readme = "README.md"
 python = "^3.11"
 scrapy = "^2.11.0"
 rich = "^13.7.0"
-pydantic-settings = "^2.1.0"
 sqlalchemy = "^2.0.23"
 structlog = "^23.2.0"
+pydantic = "^2.5.2"
+plotext = "^5.2.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
