test(webscraper): :white_check_mark: add unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cs560-webcrawler"
+name = "webcrawler"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
