--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pydantic = "^2.5.2"
 plotext = "^5.2.8"
 matplotlib = "^3.8.2"
 pytest-asyncio = "^0.23.2"
+textual = "^0.44.1"
+textual-dev = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
