--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ matplotlib = "^3.8.2"
 pytest-asyncio = "^0.23.2"
 textual = "^0.44.1"
 textual-dev = "^1.2.1"
+scrapy-playwright = "^0.0.33"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
