--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-asyncio = "^0.23.2"
 textual = "^0.44.1"
 textual-dev = "^1.2.1"
 scrapy-playwright = "^0.0.33"
+scrapy-fake-useragent = "^1.4.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
